# explore-pg-ext-windows

./: CMakeLists.txt  README.md  build.sh  h3.control  simple.control
cmake/: FetchH3.cmake  FindPostgreSQL.cmake
sql/: CMakeLists.txt  simple.sql
src/: CMakeLists.txt  simple.c  simple.h
src/h3/: CMakeLists.txt  extension.in.h
